--- a/ReconocimientoFacial.ipynb
+++ b/ReconocimientoFacial.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "imagePaths= ['Jorge', 'Jose']\n"
+      "imagePaths= ['15595919', '3', 'Jorge']\n"
      ]
     }
    ],
    "source": [
     "import cv2\n",
     "import os\n",
-    "import winsound\n",
-    "import gtts\n",
-    "from playsound import playsound\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import pyodbc\n",
+    "import datetime\n",
+    "import json\n",
     "\n",
-    "a = 0\n",
-    "duration = 1000  # milliseconds\n",
-    "freq = 440  # Hz\n",
     "dataPath = 'C:/Users/user/Desktop/Reconocimiento Facial/Data' #Cambia a la ruta donde hayas almacenado Data\n",
     "imagePaths = os.listdir(dataPath)\n",
     "print('imagePaths=',imagePaths)\n",
@@ -32,14 +31,29 @@
     "face_recognizer = cv2.face.LBPHFaceRecognizer_create()\n",
     "\n",
     "# Leyendo el modelo\n",
-    "#face_recognizer.read(dataPath + 'modeloEigenFace.xml')\n",
-    "#face_recognizer.read( dataPath + 'modeloFisherFace.xml')\n",
-    "face_recognizer.read( dataPath + 'modeloLBPHFace.xml')\n",
+    "#face_recognizer.read('modeloEigenFace.xml')\n",
+    "#face_recognizer.read('modeloFisherFace.xml')\n",
+    "face_recognizer.read(dataPath + 'modeloLBPHFace.xml')\n",
     "\n",
     "cap = cv2.VideoCapture(0,cv2.CAP_DSHOW)\n",
     "#cap = cv2.VideoCapture('Video.mp4')\n",
     "\n",
     "faceClassif = cv2.CascadeClassifier(cv2.data.haarcascades+'haarcascade_frontalface_default.xml')\n",
+    "\n",
+    "# Try connect\n",
+    "cred =  open('cred.json',)\n",
+    "credentials = json.load(cred)\n",
+    "server = credentials['raiz']['server']\n",
+    "database = credentials['raiz']['database']\n",
+    "username = credentials['raiz']['username']\n",
+    "password = credentials['raiz']['password']\n",
+    "driver= '{ODBC Driver 17 for SQL Server}'\n",
+    "table_name = 'RegistroAsistencia'\n",
+    "\n",
+    "cnxn = pyodbc.connect('DRIVER='+driver+';PORT=1433;SERVER='+server+';PORT=1443;DATABASE='+database+';UID='+username+';PWD='+ password)\n",
+    "cursor = cnxn.cursor()\n",
+    "\n",
+    "registro = {'id_empleado': [], 'entrada':[]}\n",
     "\n",
     "while True:\n",
     "\tret,frame = cap.read()\n",
@@ -52,13 +66,11 @@
     "\tfor (x,y,w,h) in faces:\n",
     "\t\trostro = auxFrame[y:y+h,x:x+w]\n",
     "\t\trostro = cv2.resize(rostro,(150,150),interpolation= cv2.INTER_CUBIC)\n",
-    "\t\t#Almacenar result 0\n",
     "\t\tresult = face_recognizer.predict(rostro)\n",
     "\n",
     "\t\tcv2.putText(frame,'{}'.format(result),(x,y-5),1,1.3,(255,255,0),1,cv2.LINE_AA)\n",
     "\t\t'''\n",
     "\t\t# EigenFaces\n",
-    "\t\t#\n",
     "\t\tif result[1] < 5700:\n",
     "\t\t\tcv2.putText(frame,'{}'.format(imagePaths[result[0]]),(x,y-25),2,1.1,(0,255,0),1,cv2.LINE_AA)\n",
     "\t\t\tcv2.rectangle(frame, (x,y),(x+w,y+h),(0,255,0),2)\n",
@@ -74,54 +86,58 @@
     "\t\t\tcv2.putText(frame,'Desconocido',(x,y-20),2,0.8,(0,0,255),1,cv2.LINE_AA)\n",
     "\t\t\tcv2.rectangle(frame, (x,y),(x+w,y+h),(0,0,255),2)\n",
     "\t\t'''\n",
+    "\n",
     "\t\t# LBPHFace\n",
-    "\t\tif result[1] < 70:\n",
-    "\t\t\t# cv2.putText(frame,'{}'.format(imagePaths[result[0]]),(x,y-25),2,1.1,(0,255,0),1,cv2.LINE_AA)\n",
-    "\t\t\t# cv2.rectangle(frame, (x,y),(x+w,y+h),(0,255,0),2)\n",
+    "\t\tif result[1] < 75 :\n",
     "\t\t\tcv2.putText(frame,'{}'.format(imagePaths[result[0]]),(x,y-25),2,1.1,(0,255,0),1,cv2.LINE_AA)\n",
     "\t\t\tcv2.rectangle(frame, (x,y),(x+w,y+h),(0,255,0),2)\n",
-    "\t\t\twinsound.Beep(freq, duration)\n",
-    "\t\t\tplaysound(dataPath + \"hola.mp3\")\n",
-    "\t\t\ta = 1\n",
+    "\t\t\t\n",
+    "\t\t\tlabel = imagePaths[result[0]]\n",
+    "\t\t\tif label in registro['id_empleado']:\n",
+    "\t\t\t\tpass\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tregistro['id_empleado'].append(label)\n",
+    "\t\t\t\tregistro['entrada'].append(datetime.datetime.now())\n",
+    "\t\t\t\tdfasis = pd.DataFrame.from_dict(registro)\n",
+    "\t\t\t\tdfasis['entrada'] = pd.to_datetime(dfasis['entrada'])\n",
+    "\t\t\t\t# Insert Dataframe into SQL Server:\n",
+    "\t\t\t\tfor index, row in dfasis.iterrows():\n",
+    "\t\t\t\t\tcursor.execute(\"INSERT INTO dbo.RegistroAsistencia (id_empleado,entrada) values(?,?)\", row.id_empleado, row.entrada)\n",
+    "\t\t\t\tcnxn.commit()\n",
+    "\t\t\t\ttime.sleep(5)\n",
     "\t\telse:\n",
     "\t\t\tcv2.putText(frame,'Desconocido',(x,y-20),2,0.8,(0,0,255),1,cv2.LINE_AA)\n",
     "\t\t\tcv2.rectangle(frame, (x,y),(x+w,y+h),(0,0,255),2)\n",
+    "\n",
     "\tcv2.imshow('frame',frame)\n",
-    "\tk = cv2.waitKey(1)\n",
-    "\t#if k == 27:\n",
-    "\tif a == 1:\n",
+    "\tk = cv2.waitKey(30)\n",
+    "\tif  k & 0xff == ord('q'):\n",
+    "\t\tcursor.close()\n",
     "\t\tbreak\n",
+    "\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "     "
+    "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 69.95035587193344)"
+       "['15595919', 'Jorge', 'Mizra']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "imagePaths"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
