--- a/PruebaCamara.ipynb
+++ b/PruebaCamara.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4de80142-1485-4b56-9875-2652b270dfaa",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "imagePaths= ['1', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '2', '20', '21', '22', '23', '24', '25', '26', '27', '28', '29', '3', '30', '31', '32', '33', '34', '35', '36', '37', '38', '39', '4', '40', '41', '42', '43', '44', '45', '46', '47', '48', '49', '5', '50', '51', '52', '53', '54', '55', '56', '57', '6', '7', '8', '9']\n"
+      "imagePaths= ['15', '57', '38', '7', '37', '31', '51', '41', '18', '12', '10', '19', '34', '3', '48', '1', '33', '46', '42', '21', '32', '24', '6', '11', '13', '39', '35', '54', '20', '52', '17', '49', '16', '28', '55', '25', '40', '30', '5', '29', '9', '45', '4', '26', '47', '8', '50', '53', '36', '27', '2', '44', '22', '14', '23', '56', '43']\n"
      ]
     }
    ],
@@ -26,7 +23,7 @@
     "import json\n",
     "\n",
     "dataPath = '/home/nvidia/Documents/RF/Reconocimiento Facial/Data' #Cambia a la ruta donde hayas almacenado Data\n",
-    "imagePaths = sorted(os.listdir(dataPath))\n",
+    "imagePaths = os.listdir(dataPath)\n",
     "print('imagePaths=',imagePaths)\n",
     "\n",
     "#face_recognizer = cv2.face.EigenFaceRecognizer_create()\n",
@@ -130,11 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd461598-a576-45fd-9cdd-98cc7a5d9d9f",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyodbc\n",
+    "import pandas as pd\n",
+    "\n",
+    "driver = '/usr/lib/aarch64-linux-gnu/odbc/libtdsodbc.so' # Change this to where FreeTDS installed the driver library!\n",
+    "\n",
+    "\n",
+    "conn = pyodbc.connect(\n",
+    "    driver = driver,\n",
+    "    TDS_Version = '7.3', \n",
+    "    server = server,\n",
+    "    port = 1433,\n",
+    "    DATABASE= 'AsistenciabSide',\n",
+    "    uid = username,\n",
+    "    pwd = passw)\n",
+    "\n",
+    "crsr = conn.cursor()\n",
+    "table = pd.read_sql(\"\"\"SELECT * FROM dbo.RegistroAsistencia \"\"\", conn)\n",
+    "#a =crsr.execute(\"SELECT name FROM sys.databases;\")"
+   ]
   }
  ],
  "metadata": {
@@ -154,8 +169,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "fb4569285eef3a3450cb62085a5b1e0da4bce0af555edc33dcf29baf3acc1368"
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
